benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExpPow2_Add_Mul_iter4_error.log
=== Verification Error - Iteration 4 ===
File: benchmarks/verus/bignum/files/bignum_ModExpPow2_Add_Mul.rs
Time: 2025-09-15 11:17:00

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:105:17
    |
105 |       if num == 0nat {
    |                 ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:110:20
    |
110 |       while temp > 0nat {
    |                    ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:111:19
    |
111 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                   ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:111:27
    |
111 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                           ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:112:23
    |
112 |         temp = temp / 2nat;
    |                       ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:126:19
    |
126 |     if mod_res == 0nat {
    |                   ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:131:20
    |
131 |       while temp > 0nat {
    |                    ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:132:19
    |
132 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                   ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:132:27
    |
132 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                           ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:133:23
    |
133 |         temp = temp / 2nat;
    |                       ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:120:45
    |
120 |     let r = ModExpPow2(sx, &sy_sub_vec, n - 1, sz);
    |                                         -   ^ expected `int`, found integer
    |                                         |
    |                                         expected because this is `vstd::prelude::int`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:105:17
    |
105 |       if num == 0nat {
    |                 ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:110:20
    |
110 |       while temp > 0nat {
    |                    ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:111:19
    |
111 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                   ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:111:27
    |
111 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                           ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:112:23
    |
112 |         temp = temp / 2nat;
    |                       ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:126:19
    |
126 |     if mod_res == 0nat {
    |                   ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:131:20
    |
131 |       while temp > 0nat {
    |                    ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:132:19
    |
132 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                   ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:132:27
    |
132 |         if temp % 2nat == 1nat { bits.push('1'); } else { bits.push('0'); }
    |                           ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `nat` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:133:23
    |
133 |         temp = temp / 2nat;
    |                       ^^^^ invalid suffix `nat`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_Mul_impl.rs:120:45
    |
120 |     let r = ModExpPow2(sx, &sy_sub_vec, n - 1, sz);
    |                                         -   ^ expected `int`, found integer
    |                                         |
    |                                         expected because this is `vstd::prelude::int`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.
